feat(security): CSRF 토큰 발급 엔드포인트 추가 (/csrf-token)
- CsrfController 추가: GET /csrf-token 호출 시 CSRF 토큰 강제 로드
  → 응답으로 {headerName, token} 반환, XSRF-TOKEN 쿠키도 함께 세팅
- CookieCsrfTokenRepository와 연동해 쿠키 기반 인증 + CSRF 보호를 지원
- 이후 변경 요청(POST/PUT/PATCH/DELETE)은 헤더 `X-XSRF-TOKEN: <token>` 포함 시 통과
- SPA 사용 가이드: 프론트에서 `credentials: 'include'`로 /csrf-token 호출 후
  응답 token 값을 헤더로 전송
- Sonar CSRF Hotspot(비활성화 경고) 보완 목적

Refs: security hardening, S4502